<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dp10"
    android:background="@drawable/bg_bottom_fragment"
    android:layout_gravity="bottom">

    <!-- 触屏拍摄 -->
    <LinearLayout
        android:id="@+id/layout_touch_take"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp20"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/layout_time_lapse"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/iv_touch_take"
            android:layout_width="@dimen/dp30"
            android:layout_height="@dimen/dp30"
            android:layout_margin="@dimen/dp5"
            android:background="@drawable/ic_camera_setting_more_light"/>
        <TextView
            android:id="@+id/tv_touch_take"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/popup_text_color"
            android:text="Touch Record"/>

    </LinearLayout>

    <!-- 延时拍摄 -->
    <LinearLayout
        android:id="@+id/layout_time_lapse"
        android:layout_width="0dp"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp20"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/layout_touch_take"
        app:layout_constraintEnd_toStartOf="@+id/layout_flash"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:id="@+id/iv_time_lapse"
                android:layout_width="@dimen/dp30"
                android:layout_height="@dimen/dp30"
                android:layout_margin="@dimen/dp5"
                android:background="@drawable/ic_camera_setting_more_light"/>
            <TextView
                android:id="@+id/tv_time_lapse"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textColor="@color/popup_text_color"
                android:text="@string/tv_time_lapse"/>
        </LinearLayout>
    </LinearLayout>

    <!-- 闪光灯/柔光自拍 -->
    <LinearLayout
        android:id="@+id/layout_flash"
        android:layout_width="0dp"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp20"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/layout_time_lapse"
        app:layout_constraintEnd_toStartOf="@+id/layout_camera_setting"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:id="@+id/iv_flash"
                android:layout_width="@dimen/dp30"
                android:layout_height="@dimen/dp30"
                android:layout_margin="@dimen/dp5"
                android:background="@drawable/ic_camera_flash_off"/>
            <TextView
                android:id="@+id/tv_flash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/popup_text_color"
                android:text="@string/tv_flash"/>
        </LinearLayout>
    </LinearLayout>

    <!-- 相机设置 -->
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/layout_camera_setting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp20"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/layout_flash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/iv_camera_setting"
            android:layout_width="@dimen/dp30"
            android:layout_height="@dimen/dp30"
            android:layout_margin="@dimen/dp5"
            android:background="@drawable/ic_camera_setting"/>
        <TextView
            android:id="@+id/tv_camera_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/popup_text_color"
            android:text="@string/tv_camera_setting"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        app:layout_constraintBottom_toBottomOf="parent"
        android:weightSum="4"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#2A2A2A"
            android:textColor="#fff"
            android:id="@+id/sec0"
            android:text="0 sec"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#2A2A2A"
            android:textColor="#fff"
            android:id="@+id/sec5"
            android:text="5 sec"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#2A2A2A"
            android:textColor="#fff"
            android:id="@+id/sec10"
            android:text="10 sec"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#2A2A2A"
            android:textColor="#fff"
            android:id="@+id/sec15"
            android:text="15 sec"/>


    </LinearLayout>





    <TextView
        android:id="@+id/tv_luminous_compensation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp20"
        android:visibility="gone"
        android:textColor="@color/popup_text_color"
        android:text="@string/tv_luminous_compensation"
        app:layout_constraintStart_toStartOf="@id/layout_touch_take"
        app:layout_constraintTop_toBottomOf="@id/layout_touch_take"/>

    <Switch
        android:id="@+id/sw_luminous_compensation"
        android:layout_width="wrap_content"
        android:visibility="gone"

        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp20"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_luminous_compensation"
        android:switchMinWidth="@dimen/switch_min_width"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp20"
        android:visibility="gone"
        android:textColor="@color/popup_text_color"
        android:text="@string/tv_edge_blur"
        app:layout_constraintStart_toStartOf="@id/tv_luminous_compensation"
        app:layout_constraintEnd_toEndOf="@id/tv_luminous_compensation"
        app:layout_constraintTop_toBottomOf="@id/tv_luminous_compensation"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <Switch
        android:id="@+id/sw_edge_blur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp20"
        android:visibility="gone"
        android:switchMinWidth="@dimen/switch_min_width"
        app:layout_constraintStart_toStartOf="@id/sw_luminous_compensation"
        app:layout_constraintEnd_toEndOf="@id/sw_luminous_compensation"
        app:layout_constraintTop_toBottomOf="@id/sw_luminous_compensation"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>